  include/compat.h: Remove MC68K #define and ensure that code previously
  conditional on MC68K is now always compiled. (RFB)

2011-12-07
- bios/lineainit.c: Fix crash when booting in TT High resolution. (RFB)

2011-12-10
- bios/bios.c bios/kprint.c bios/kprint.h: Fix crash when kprintf() was
  called from user mode to write to RS232 or MIDI. (RFB)

2011-12-11
- bios/bios.c bios/clock.c bios/clock.h bios/machine.c bios/machine.h
  include/config.h: Added the CONF_WITH_MEGARTC define to allow disabling MegaST
  real-time clock support. (VRI)

2011-12-12
- bios/aciavecs.S bios/midi.c include/config.h: Added the CONF_WITH_MIDI_ACIA
  define to allow disabling MIDI ACIA support. (VRI)
- bios/chardev.c bios/mfp.c include/config.h: Added the CONF_WITH_MFP_RS232
  define to allow disabling MFP RS-232 support. (VRI)

2011-12-14
- bios/screen.c bios/screen.h bios/xbios.c: Added TT video syscalls. (RFB)
- bios/aciavecs.S bios/clock.c include/config.h: Added the CONF_WITH_IKBD_CLOCK
  define to allow disabling IKBD clock support. (VRI)

2011-12-15
- bios/acia.h bios/aciavecs.S bios/ikbd.c include/config.h: Added the
  CONF_WITH_IKBD_ACIA define to allow disabling IKBD ACIA support. (VRI)
- bios/aciavec.S include/config.h: Use midivec even when CONF_WITH_MIDI_ACIA
  is defined. (VRI)
- bios/ikbd.c: Improved debug traces. (VRI)
- bios/ikbd.h: Removed prototypes of nonexistent functions. (VRI)

2011-12-19
- bios/parport.c include/config.h: Added the CONF_WITH_PRINTER_PORT define to
  allow disabling Parallel Printer Port support. (VRI)
- bios/machine.c bios/sound.c bios/sound.h bios/vectors.S include/config.h:
  Added the CONF_WITH_YM2149 define to allow disabling YM2149 soundchip
  support. (VRI)

2011-12-21
- bdos/fsglob.c bios/blkdev.h include/config.h: Moved BLKDEVNUM define to
  config.h; changed number of drvtbl[] entries to BLKDEVNUM. (RFB)
- bdos/proc.c: Changed a hardcoded constant to NUMCURDIR. (RFB)